refactoring para usar H2 em dev

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,11 +1,16 @@
 spring:
   jpa:
     hibernate:
-      ddl-auto: validate
+      format_sql: true
+    show-sql: true
   datasource:
-    url: jdbc:mysql://fiapnetflix.c86nbpf4k73h.sa-east-1.rds.amazonaws.com:3306/netflix-user
-    username: admin
-    password: iXHggP96c3dqjJ2k
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password:
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 eureka:
   instance:
