--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,6 +1,12 @@
 spring:
   application:
     name: netflix-user
+  profiles:
+    active:
+      dev
   cloud:
     config:
       uri: http://netflix-configuration-server.sa-east-1.elasticbeanstalk.com
+
+server:
+  port: 8090
