--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     username: sa
-    password:
+    password: sa
   h2:
     console:
       enabled: true
