--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -11,12 +11,9 @@ spring:
     console:
       enabled: true
       path: /h2-console
+  zipkin:
+    baseUrl: http://localhost:9411/
 
 eureka:
-  instance:
-    preferIpAddress: true
-  client:
-    registerWithEureka: true
-    fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
