--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,4 +1,16 @@
+spring:
+  jpa:
+    hibernate:
+      format_sql: true
+    show-sql: true
+  datasource:
+    url: jdbc:h2:mem:testdb
+    username: sa
+    password: sa
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 eureka:
   client:
-    registerWithEureka: false
-    fetchRegistry: false
+    enabled: false
