--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -4,7 +4,7 @@ spring:
       format_sql: true
     show-sql: true
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:netflix-user
     username: sa
     password: sa
   h2:
