configurações para docker

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,20 +1,17 @@
 spring:
-  jpa:
-    hibernate:
-      format_sql: true
-    show-sql: true
   datasource:
-    url: jdbc:h2:mem:netflix-user
-    username: sa
-    password: sa
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/netflix-user
+    username: root
+    password: root
+  jpa:
+    show-sql: true
+    hibernate.format_sql: true
   zipkin:
     baseUrl: http://localhost:9411/
 
 eureka:
+  client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
 
