--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,15 +1,16 @@
 spring:
-  jpa:
-    hibernate:
-      ddl-auto: validate
   datasource:
-    url: jdbc:mysql://fiapnetflix.c86nbpf4k73h.sa-east-1.rds.amazonaws.com:3306/netflix-user
-    username: admin
-    password: iXHggP96c3dqjJ2k
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://netflix-mysql:3306/netflix-user
+    username: root
+    password: root
+  jpa:
+    show-sql: true
+    hibernate.format_sql: true
   zipkin:
-    baseUrl: http://zipkin:9411/
+    baseUrl: http://netflix-zipkin:9411/
 
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://discovery-server:8761/eureka/
+      defaultZone: http://netflix-discovery-server:8761/eureka/
